[gd_scene load_steps=16 format=3 uid="uid://6o3tcdqrf4og"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ydrnv"]
[ext_resource type="Shader" path="res://Scenes/Test/RemoteTransformTest.gdshader" id="4_eiyvw"]
[ext_resource type="Script" path="res://Scenes/Player/canvas_group.gd" id="5_86qsm"]
[ext_resource type="Script" path="res://Scenes/Test/sprites.gd" id="5_ervay"]
[ext_resource type="Texture2D" uid="uid://ca4bippspm4k3" path="res://Assets/TestRig.png" id="6_lp472"]
[ext_resource type="Script" path="res://Scenes/weapon.gd" id="7_ygags"]
[ext_resource type="Script" path="res://Scenes/Player/animation_player.gd" id="8_ilhod"]
[ext_resource type="Resource" uid="uid://csnh6sevj4iau" path="res://Resources/(Not Finished)/Betsy.tres" id="8_j5r5q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eyr1j"]
shader = ExtResource("4_eiyvw")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/width = 1.7
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="Animation" id="Animation_a272a"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_hwsy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasGroup/Sprites/LHandOffset/LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-67, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasGroup/Sprites/LHandOffset/LeftHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasGroup/Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_7ahgy"]
resource_name = "ReloadMag1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasGroup/Sprites/LHandOffset/LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.1333, 0.266667, 0.3, 0.4, 0.433333, 0.566667, 0.6, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0), Vector2(1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(-1, 0), Vector2(-2, 0), Vector2(-2, 0), Vector2(1, 0), Vector2(1, 0), Vector2(0.5, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasGroup/Sprites/LHandOffset/LeftHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [19, 21, 16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasGroup/Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.5, 2), Vector2(1.5, 2), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3qo7"]
_data = {
"Idle": SubResource("Animation_a272a"),
"RESET": SubResource("Animation_hwsy8"),
"ReloadMag1": SubResource("Animation_7ahgy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8it3u"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4uopn"]
size = Vector2(30, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 512
motion_mode = 1
script = ExtResource("1_ydrnv")
weaponOveride = ExtResource("8_j5r5q")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_eyr1j")
use_mipmaps = true
script = ExtResource("5_86qsm")
texture = "res://Assets/TestRig.png"
weapon = ExtResource("8_j5r5q")

[node name="Sprites" type="Node2D" parent="CanvasGroup"]
script = ExtResource("5_ervay")

[node name="Body" type="Sprite2D" parent="CanvasGroup/Sprites"]
texture = ExtResource("6_lp472")
hframes = 2
vframes = 4
frame = 3

[node name="Left" type="RemoteTransform2D" parent="CanvasGroup/Sprites/Body"]
position = Vector2(-15, 0)
remote_path = NodePath("../../LeftBicept")
update_rotation = false
update_scale = false

[node name="Right" type="RemoteTransform2D" parent="CanvasGroup/Sprites/Body"]
position = Vector2(15, 0)
remote_path = NodePath("../../RightBicept")
update_rotation = false
update_scale = false

[node name="LeftBicept" type="Sprite2D" parent="CanvasGroup/Sprites"]
position = Vector2(-15, 0)
texture = ExtResource("6_lp472")
offset = Vector2(-13, 0)
hframes = 2
vframes = 8
frame = 2

[node name="Forearm" type="RemoteTransform2D" parent="CanvasGroup/Sprites/LeftBicept"]
position = Vector2(-26, 0)
remote_path = NodePath("../../LeftForearm")
update_rotation = false

[node name="LeftForearm" type="Sprite2D" parent="CanvasGroup/Sprites"]
position = Vector2(-41, 0)
texture = ExtResource("6_lp472")
offset = Vector2(-13, 0)
hframes = 2
vframes = 8

[node name="LHandOffset" type="Node2D" parent="CanvasGroup/Sprites"]

[node name="LeftHand" type="Sprite2D" parent="CanvasGroup/Sprites/LHandOffset"]
position = Vector2(-67, 0)
texture = ExtResource("6_lp472")
offset = Vector2(0, -3)
flip_h = true
hframes = 4
vframes = 8
frame = 16

[node name="LeftTranform" type="RemoteTransform2D" parent="CanvasGroup/Sprites/LHandOffset/LeftHand"]
remote_path = NodePath("../../../../Weapon")
update_position = false
update_rotation = false
update_scale = false

[node name="RightBicept" type="Sprite2D" parent="CanvasGroup/Sprites"]
position = Vector2(15, 0)
texture = ExtResource("6_lp472")
offset = Vector2(13, 0)
hframes = 2
vframes = 8
frame = 3

[node name="Forearm" type="RemoteTransform2D" parent="CanvasGroup/Sprites/RightBicept"]
position = Vector2(26, 0)
remote_path = NodePath("../../RightForearm")
update_rotation = false

[node name="RightForearm" type="Sprite2D" parent="CanvasGroup/Sprites"]
position = Vector2(41, 0)
texture = ExtResource("6_lp472")
offset = Vector2(13, 0)
hframes = 2
vframes = 8
frame = 1

[node name="RHandOffset" type="Node2D" parent="CanvasGroup/Sprites"]

[node name="RightHand" type="Sprite2D" parent="CanvasGroup/Sprites/RHandOffset"]
position = Vector2(67, 0)
texture = ExtResource("6_lp472")
offset = Vector2(0, -3)
hframes = 4
vframes = 8
frame = 16

[node name="RightTranform" type="RemoteTransform2D" parent="CanvasGroup/Sprites/RHandOffset/RightHand"]
remote_path = NodePath("../../../../Weapon")
update_rotation = false
update_scale = false

[node name="Head" type="Sprite2D" parent="CanvasGroup/Sprites"]
z_index = 1
texture = ExtResource("6_lp472")
flip_v = true
hframes = 2
vframes = 4
frame = 2

[node name="Weapon" type="Node2D" parent="CanvasGroup"]
position = Vector2(67, 0)
scale = Vector2(2, 2)
script = ExtResource("7_ygags")
weapon = ExtResource("8_j5r5q")

[node name="WeaponSway" type="Node2D" parent="CanvasGroup/Weapon"]

[node name="WeaponOffset" type="Node2D" parent="CanvasGroup/Weapon/WeaponSway"]

[node name="Attachments" type="Node2D" parent="CanvasGroup/Weapon/WeaponSway/WeaponOffset"]
metadata/_edit_lock_ = true

[node name="Weapon" type="Sprite2D" parent="CanvasGroup/Weapon/WeaponSway/WeaponOffset"]
metadata/_edit_lock_ = true

[node name="LeftHand" type="RemoteTransform2D" parent="CanvasGroup/Weapon"]
remote_path = NodePath("../../Sprites/LHandOffset/LeftHand")
update_position = false
update_rotation = false
update_scale = false

[node name="RightHand" type="RemoteTransform2D" parent="CanvasGroup/Weapon"]
remote_path = NodePath("../../Sprites/RHandOffset/RightHand")
update_position = false
update_rotation = false
update_scale = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n3qo7")
}
autoplay = "Idle"
script = ExtResource("8_ilhod")

[node name="Interaction Area" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8it3u")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4uopn")

[node name="Camera" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_left_margin = 0.02
drag_top_margin = 0.02
drag_right_margin = 0.02
drag_bottom_margin = 0.02

[node name="Timers" type="Node" parent="."]

[node name="Fire Rate Refresh" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Reload Speed" type="Timer" parent="Timers"]
one_shot = true

[node name="Swinging Speed" type="Timer" parent="Timers"]
one_shot = true

[node name="Attacking" type="Timer" parent="Timers"]
one_shot = true

[node name="Effects" type="Node" parent="."]

[connection signal="timeout" from="Timers/Reload Speed" to="." method="_on_reload_speed_timeout"]
